--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,10 @@
 {
   "name": "tether-tooltip",
-  "version": "0.2.6",
+  "version": "0.2.2",
   "homepage": "https://github.hubspot.com/tooltip",
   "authors": [
-    "Zack Bloom <zackbloom@gmail.com>",
-    "Adam Schwartz <adam.flynn.schwartz@gmail.com>"
+    "Adam Schwartz <adam.flynn.schwartz@gmail.com>",
+    "Zack Bloom <zbloom@hubspot.com>"
   ],
   "description": "Tooltips built on Tether",
   "keywords": [
@@ -19,7 +19,7 @@
     "tests"
   ],
   "dependencies": {
-    "drop": "0.5.4",
-    "tether": "0.6.5"
+    "drop": "0.3.8",
+    "tether": "0.6.0"
   }
 }
