--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-coffee": "~1.2.5",
     "gulp-concat": "~2.1.7",
     "gulp-rename": "~0.2.1",
-    "underscore": "~1.5.2"
+    "underscore": "~1.5.2",
+    "gulp-wrap-umd": "~0.2.0"
   }
 }
